--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
           ecommerce:"dataLayer"
       });
     </script>
+    <script src="https://3dsec.sberbank.ru/payment/docsite/assets/js/ipay.js"></script>
+    <script> var ipay = new IPAY({api_token: 'v34hu13vb58ij914uti31m2f5c'})</script>
     <noscript><div><img src="https://mc.yandex.ru/watch/61530610" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
