--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="yandex-verification" content="2a231622936d63da" />
+    <meta name="google-site-verification" content="7Iuu_VeIYETb1GU5Xrf6-l-Z5Fyskh0_nujB7qnJ0yw" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
