--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     </script>
     <script src="https://securepayments.sberbank.ru/payment/docsite/assets/js/ipay.js"></script>
     <script> var ipay = new IPAY({api_token: 'v34hu13vb58ij914uti31m2f5c'})</script>
+    <script src="//code-ya.jivosite.com/widget/MJI1tOBa12" async></script>
     <noscript><div><img src="https://mc.yandex.ru/watch/61530610" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
